# axum-scaffold

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION_STATUS.md  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
.kiro/specs/v020-enhanced-features/: design.md  requirements.md  tasks.md
.kiro/specs/v030-template-and-update/: design.md  requirements.md  tasks.md
.specify/memory/: constitution.md
proptest-regressions/template/: engine.txt
specs/001-cli-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cli-mvp/checklists/: requirements.md
specs/001-cli-mvp/contracts/: cli-api.md  generated-project-api.md
src/: configuration.rs  error.rs  lib.rs  main.rs
src/cli/: args.rs  mod.rs  prompts.rs
src/config/: mod.rs  user_config.rs
src/generator/: git.rs  mod.rs  project.rs
src/router/: mod.rs
src/template/: context.rs  custom_loader.rs  engine.rs  exporter.rs  inheritance.rs  mod.rs  resolver.rs
src/template/templates/: mod.rs
src/template/templates/ci/.github/workflows/: ci.yml.hbs
src/template/templates/single_mode/: .env.example  .gitignore  Cargo.toml.hbs  Dockerfile.hbs  README.md.hbs  biz_errors.yaml.hbs  build.rs.hbs  lib.rs  main.rs
src/template/templates/single_mode/common/: app_err.rs
src/template/templates/single_mode/domain/: mod.rs
src/template/templates/single_mode/migrations/: 001_initial.sql.hbs
src/template/templates/single_mode/resources/: configuration-prod.yaml  configuration.yaml
src/template/templates/single_mode/router/: api.rs
src/template/templates/single_mode/src/: config.rs.hbs  db.rs.hbs  lib.rs.hbs  main.rs.hbs
src/template/templates/single_mode/src/handlers/: auth.rs.hbs  health.rs.hbs  mod.rs.hbs
src/template/templates/workspace_mode/api/: Cargo.toml.hbs
src/template/templates/workspace_mode/api/src/: lib.rs.hbs  main.rs.hbs
src/template/templates/workspace_mode/api/src/handlers/: auth.rs.hbs  mod.rs.hbs
src/template/templates/workspace_mode/api/src/middleware/: mod.rs.hbs
src/template/templates/workspace_mode/common/: Cargo.toml.hbs
src/template/templates/workspace_mode/common/src/: error.rs.hbs  lib.rs.hbs
src/template/templates/workspace_mode/domain/: Cargo.toml.hbs
src/template/templates/workspace_mode/domain/src/: lib.rs.hbs
src/template/templates/workspace_mode/domain/src/entities/: mod.rs.hbs
src/template/templates/workspace_mode/domain/src/traits/: mod.rs.hbs
src/template/templates/workspace_mode/infrastructure/: Cargo.toml.hbs
src/template/templates/workspace_mode/infrastructure/src/: db.rs.hbs  lib.rs.hbs
src/template/templates/workspace_mode/root/: .env.example.hbs  .gitignore  Cargo.toml.hbs  Dockerfile.hbs  README.md.hbs
src/updater/: checksum.rs  engine.rs  metadata.rs  mod.rs
src/utils/: mod.rs  rust_toolchain.rs  validator.rs
tests/: generation_tests.rs
