[package]
name = "create-axum-app"
version = "0.1.0"
edition = "2024"
description = "A command-line tool to quickly create Axum web applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Yu-Xiao-Sheng/create-axum-app"
readme = "README.md"
keywords = ["axum", "cli", "web", "scaffolding", "rust"]
categories = ["command-line-utilities", "web-programming"]

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "tracing"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "uuid", "mysql", "macros", "chrono", "migrate"] }
config = "0.15"
console-subscriber = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-appender = "0.2"
tracing-log = "0.2"
validator = "0.20"
anyhow = "1"
