[package]
name = "create-axum-app"
version = "0.1.0"
edition = "2024"
description = "A command-line tool to quickly create Axum web applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Yu-Xiao-Sheng/create-axum-app"
readme = "README.md"
keywords = ["axum", "cli", "web", "scaffolding", "rust"]
categories = ["command-line-utilities", "web-programming"]

[lib]
path = "src/lib.rs"

[dependencies]
# CLI parsing and prompts
clap = { version = "4.5", features = ["derive"] }
inquire = "0.7"

# Template engine
handlebars = "5.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Git operations
git2 = "0.19"

# File system operations
fs_extra = "1.3"

# Testing
tempfile = "3"

# Date/time for templates
chrono = "0.4"
