[package]
name = "axum-app-create"
version = "0.2.0"
edition = "2024"
description = "A command-line tool to quickly create Axum web applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Yu-Xiao-Sheng/axum-app-create"
readme = "README.md"
keywords = ["axum", "cli", "web", "scaffolding", "rust"]
categories = ["command-line-utilities", "web-programming"]
exclude = ["test-*", "*.test"]

[lib]
path = "src/lib.rs"

[dependencies]
# CLI parsing and prompts
clap = { version = "4", features = ["derive"] }
inquire = "0.9"

# Template engine
handlebars = "6"

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Git operations
git2 = "0.20"

# File system operations
fs_extra = "1"

# Testing
tempfile = "3"

# Property-based testing
proptest = "1"

# Date/time for templates
chrono = "0.4"
